Updates tests to cover more scenarios